# 7574A16C2PROY

./: README.md  Readme.md
database/: DockerFile  Dockerfile  Readme.md
database/scripts/: schema.sql
dns/: Readme.md
loadbalancer/: .gitignore  CMakeLists.txt  README.md  constants.h  index.html  main.cpp  mosquittomosquitto.db  workers.csv
loadbalancer-daemon/: load.db  loadbalancer-daemon.sh  log  maquinas2  temp  typescript
loadbalancer/release/: Dockerfile  loadbalancer  loadbalancer-daemon.sh
loadbalancer/release/mosquitto/: .mosquitto.db  config  mosquitto.config  mosquitto.pwd
server/: .gitignore  Dockerfile  Readm.md  build.gradle  gradlew
server/daemon/: send-statics.sh
server/gradle/wrapper/: gradle-wrapper.properties
server/scripts/: import.sql
server/src/main/resources/: application.properties  banner.txt  import.sql
server/src/main/resources/static/: index.html
server/src/main/resources/static/lib/angular/: package.json
server/src/main/resources/static/lib/angular-animate/: package.json
server/src/main/resources/static/lib/angular-aria/: package.json
server/src/main/resources/static/lib/angular-jwt/: README.md  package.json
server/src/main/resources/static/lib/angular-local-storage/: package.json
server/src/main/resources/static/lib/angular-material/: package.json
server/src/main/resources/static/lib/angular-messages/: package.json
server/src/main/resources/static/lib/angular-mocks/: package.json
server/src/main/resources/static/src/: app.js
server/src/main/resources/static/src/auth/: Auth.js  AuthService.js
(+62 files in other folders)
